Made instructions and Art title fixed on the page, added z-index so the list would scroll under the nav bar and instructions

--- a/src/components/ListResults/ListResults.css
+++ b/src/components/ListResults/ListResults.css
@@ -2,8 +2,9 @@
     text-align: left;
     margin-top: 15px;
     margin-left: 25px;
+    position: relative;
 }
-.ListResultsNav {
+.ListResult .nav {
 text-align: center;
 }
 .ListResults img {
@@ -16,7 +17,6 @@ text-align: center;
     /* width: 100%; */
 }
 .ListResults .background {
-    /* background-image: url('../../ArtInstituteofChicago2.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -25,19 +25,33 @@ text-align: center;
     width: 100%;
     position: fixed; 
 }
+.ListResults h3{
+    /* margin-left: 20px; */
+    margin-top: 50px;
+    position: fixed;
+    z-index: 10;
+}
+.ListResults .text {
+    margin-left: 30px;
+    position: absolute;
+    margin-top: 40px;
+    z-index: 10;
+}
 .ListResults .background2{
     opacity: 1;
     font-weight: bold;
     margin-left: 30px;
     position: absolute;
-    top: 50px;
+    top: 110px;
     height: 100%;
     width: 100%;
+    z-index: -1;
 }
-.ListResults .background .instr {
+.ListResults .instr {
     opacity: 1;
     font-weight: bold;
     text-align: center;
+    position: fixed;
 }
 .screen {
     width: 100%;
